--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.7",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "socket.io": "^4.5.3"
   },
   "name": "backend",
   "version": "1.0.0",
