--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ ACCESSTOKEN_MK=12E1936D62E849499F49B83EF237D
 REFRESTOKEN_MK = dasdbhjdbhjagywgdjhabsljkdhgwuiahduidghuiawghduaf
 LANGUAGETOKEN_MK= awjhdawkgdhalhuwafoawifalsf
 port= 5000
+UV_THREADPOOL_SIZE = 
