--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGODB_URL=mongodb://localhost:27017/OMENU
+MONGODB_URL=mongodb://127.0.0.1:27017/OMENU
 ACCESSTOKEN_MK=12E1936D62E849499F49B83EF237D
 REFRESTOKEN_MK = dasdbhjdbhjagywgdjhabsljkdhgwuiahduidghuiawghduaf
 LANGUAGETOKEN_MK= awjhdawkgdhalhuwafoawifalsf
