--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.7",
     "nodemon": "^2.0.20",
-    "socket.io": "^4.5.3"
+    "socket.io": "^4.5.3",
+    "speakeasy": "^2.0.0"
   },
   "name": "backend",
   "version": "1.0.0",
